# summit-consultancy

./: .dockerignore  .env.example  .gitignore  CHANGES.md  DESIGN_SYSTEM.md  Dockerfile  PHASE_2.md  Procfile  fly.toml  hero-demo.html  manage.py  package-lock.json  package.json  pyproject.toml  skills-lock.json
apps/core/: adapters.py  admin.py  ai.py  context_processors.py  models.py  ms365_smtp.py  prose.py  realtime.py  sitemaps.py  tasks.py  urls.py  views.py
apps/inquiries/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/portfolio/: admin.py  models.py  urls.py  views.py
apps/services/: admin.py  apps.py  models.py  urls.py  views.py
apps/tenders/: admin.py  apps.py  forms.py  models.py  storage.py  tasks.py  urls.py  views.py
assets/css/: input.css
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py  tunnel.py
docs/: DATA-FLOW.md  LIFECYCLE.md  PIONEER_PRODUCT_SPEC.md  Pioneer Consultants.docx
docs/prds/: PRD-01-lead-capture.md  PRD-02-portfolio-showcase.md  PRD-03-services-catalog.md  PRD-04-site-shell-cms.md
docs/workflows/: REGISTRY.md  WORKFLOW-email-acknowledgement-task.md  WORKFLOW-email-notification-task.md  WORKFLOW-field-blur-validation.md  WORKFLOW-inquiry-pipeline-management.md  WORKFLOW-inquiry-submission.md  WORKFLOW-portfolio-filter.md  WORKFLOW-project-publish.md  WORKFLOW-services-tab-navigation.md  (+2 more)
fixtures/: services_seed.json
templates/: 404.html  500.html  base.html
tests/: conftest.py  test_home.py  test_inquiries.py  test_ms365_smtp.py  test_portfolio.py
(+101 files in other folders)
